<resources>
    <string name="app_name">Finance Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_transactions">Transactions</string>
    <string name="balance">Balance</string>
    <string name="month_balance">Month balance</string>

    <string name="email_hint">example@email.com</string>
    <string name="pass_hint">**********</string>
    <string name="Sign_In">Sign in</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Sign_In_Fb">Sign in with Facebook</string>
    <string name="Sign_Up_Fb">Sign up with Facebook</string>
    <string name="No_Account">Don\'t have an account yet ?</string>
    <string name="Have_Account">Already have an account ?</string>
    <string name="Sing_Up_Here">Sign Up here</string>
    <string name="Name">Name</string>
    <string name="Surname">Surname</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="appImageDescription">appImage</string>

    <string name="SharedPrefDate">DateSave</string>
    <string name="SharedPrefToken">TokenSave</string>
</resources>
