<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.extremeprogramming.financetracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_reports"
        android:name="com.extremeprogramming.financetracker.ui.reports.ReportsFragment"
        android:label="@string/menu_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/nav_transactions"
        android:name="com.extremeprogramming.financetracker.ui.transactions.TransactionsFragment"
        android:label="@string/menu_transactions"
        tools:layout="@layout/fragment_slideshow" />

</navigation>